first step to working paginator API in Adapter